k8s/users-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-worker-service
  labels:
    app: users-worker
spec:
  type: NodePort
  ports:
    - targetPort: 8000
      port: 8000
  selector:
    app: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-worker-deployment
  labels:
    app: users-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-worker
  template:
    metadata:
      labels:
        app: users-worker
    spec:
      containers:
        - name: users-worker-service
          image: users-worker-service
          ports:
            - containerPort: 8000
