k8s/users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users
spec:
  type: NodePort
  ports:
    - targetPort: 8000
      port: 8000
  selector:
    app: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users-service
          image: users-service
          ports:
            - containerPort: 8000
